--- a/basler-beauty.html
+++ b/basler-beauty.html
@@ -44,7 +44,7 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; 
+            justify-content: space-between; /* Распределяем контент */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
@@ -75,15 +75,11 @@
             display: flex; 
             flex-direction: column; 
             gap: 15px; 
-            margin-top: auto; 
         }
 
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .nav-arrows, .footer-bottom { display: flex; justify-content: space-between; font-size: 15px; }
+        .nav-arrows a, .footer-bottom a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
-
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .content-side {
             width: 50%;
@@ -104,6 +100,11 @@
 
         @keyframes fadeInScroll { from { opacity: 0; } to { opacity: 1; } }
 
+        /* СКРЫВАЕМ МОБИЛЬНОЕ НА ДЕСКТОПЕ */
+        @media (min-width: 769px) {
+            .mobile-bottom-wrapper { display: none !important; }
+        }
+
         /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
             body { flex-direction: column; overflow-y: auto; }
@@ -112,9 +113,11 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 40px;
+                padding: 80px 20px 20px;
                 display: block;
             }
+
+            .info-side .left-footer { display: none !important; }
 
             .back-link {
                 position: fixed;
@@ -133,33 +136,36 @@
                 padding: 20px;
             }
 
-            .info-side .left-footer { display: none; }
+            .description { text-align: left; margin-top: 20px; }
 
-            .mobile-nav { display: flex; padding: 20px; border-top: 1px solid #eee; }
+            /* МОБИЛЬНЫЙ ФУТЕР */
+            .mobile-bottom-wrapper {
+                display: flex;
+                flex-direction: column;
+                gap: 5px; /* РАССТОЯНИЕ 5PX */
+                padding: 20px 0 50px 0;
+                border-top: 1px solid #eee;
+            }
 
-            .mobile-footer {
+            .mobile-nav-arrows, .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 20px 20px 50px;
-                font-size: 14px;
-                width: 100%;
-                box-sizing: border-box;
+                padding: 0 20px;
+                font-size: 15px;
             }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            .description { text-align: left; margin-top: 20px; }
-        }
 
-        @media (min-width: 769px) {
-            .mobile-nav, .mobile-footer { display: none; }
+            .mobile-nav-arrows a, .mobile-footer a { 
+                text-decoration: none; 
+                color: #0D0D0D; 
+            }
         }
     </style>
 </head>
 <body>
 
     <div class="info-side">
-        <a href="index.html?p=6" class="back-link">← Back to portfolio</a>
-        
         <div>
+            <a href="index.html?p=6" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">BASLER BEAUTY</span> is a retailer of cosmetics and skin and hair care products. 
                 <br><br>As part of a long-term collaboration, I was responsible for product photography for the brand's official social media accounts, including styling, shooting, and post-production of images in accordance with the company's visual guidelines. 
@@ -185,14 +191,15 @@
         <img src="work48.png" loading="lazy" decoding="async">
     </div>
 
-    <div class="nav-arrows mobile-nav">
-        <a href="speexx.html">‹ Previous</a>
-        <a href="me.html">Next ›</a>
-    </div>
-
-    <div class="mobile-footer">
-        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-        <div class="copyright">© 2026 Lisa Voronov</div>
+    <div class="mobile-bottom-wrapper">
+        <div class="mobile-nav-arrows">
+            <a href="speexx.html">‹ Previous</a>
+            <a href="me.html">Next ›</a>
+        </div>
+        <div class="mobile-footer">
+            <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+            <div class="copyright">© 2026 Lisa Voronov</div>
+        </div>
     </div>
 
 </body>
