--- a/iles-formula.html
+++ b/iles-formula.html
@@ -44,7 +44,7 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; 
+            justify-content: space-between; /* Прижимает футер вниз */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
@@ -66,7 +66,6 @@
             max-width: 480px;
             margin-top: 40px;
             text-align: justify;
-            text-align-last: left;
         }
 
         .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
@@ -75,15 +74,21 @@
             display: flex; 
             flex-direction: column; 
             gap: 15px; 
-            margin-top: auto; 
         }
 
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
-        .nav-arrows a:hover { opacity: 0.5; }
+        .nav-arrows, .footer-bottom { 
+            display: flex; 
+            justify-content: space-between; 
+            font-size: 15px; 
+        }
 
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
+        .nav-arrows a, .footer-bottom a { 
+            text-decoration: none; 
+            color: #0D0D0D; 
+            transition: opacity 0.3s; 
+        }
+
+        .nav-arrows a:hover { opacity: 0.5; }
 
         .content-side {
             width: 50%;
@@ -104,6 +109,11 @@
 
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
+        /* СКРЫВАЕМ МОБИЛЬНОЕ НА ДЕСКТОПЕ */
+        @media (min-width: 769px) {
+            .mobile-bottom-wrapper { display: none !important; }
+        }
+
         /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
             body { flex-direction: column; overflow-y: auto; }
@@ -112,15 +122,15 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 40px;
+                padding: 80px 20px 20px;
                 display: block;
             }
 
+            .info-side .left-footer { display: none !important; }
+
             .back-link {
                 position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
+                top: 0; left: 0; width: 100%;
                 background: #ffffff;
                 padding: 20px;
                 z-index: 100;
@@ -133,33 +143,36 @@
                 padding: 20px;
             }
 
-            .info-side .left-footer { display: none; }
+            .description { text-align: left; margin-top: 20px; }
 
-            .mobile-nav { display: flex; padding: 20px; border-top: 1px solid #eee; }
+            /* Единый мобильный футер */
+            .mobile-bottom-wrapper {
+                display: flex;
+                flex-direction: column;
+                gap: 5px; /* Дистанция между строками 5px */
+                padding: 20px 0 50px 0;
+                border-top: 1px solid #eee;
+            }
 
-            .mobile-footer {
+            .mobile-nav-arrows, .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 20px 20px 50px;
-                font-size: 14px;
-                width: 100%;
-                box-sizing: border-box;
+                padding: 0 20px;
+                font-size: 15px;
             }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            .description { text-align: left; margin-top: 20px; }
-        }
 
-        @media (min-width: 769px) {
-            .mobile-nav, .mobile-footer { display: none; }
+            .mobile-nav-arrows a, .mobile-footer a { 
+                text-decoration: none; 
+                color: #0D0D0D; 
+            }
         }
     </style>
 </head>
 <body>
 
     <div class="info-side">
-        <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
-        
         <div>
+            <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
                 <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
@@ -186,14 +199,15 @@
         <img src="work25.png" loading="lazy" decoding="async">
     </div>
 
-    <div class="nav-arrows mobile-nav">
-        <a href="simplie.html">‹ Previous</a>
-        <a href="trendyol.html">Next ›</a>
-    </div>
-
-    <div class="mobile-footer">
-        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-        <div class="copyright">© 2026 Lisa Voronov</div>
+    <div class="mobile-bottom-wrapper">
+        <div class="mobile-nav-arrows">
+            <a href="simplie.html">‹ Previous</a>
+            <a href="trendyol.html">Next ›</a>
+        </div>
+        <div class="mobile-footer">
+            <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+            <div class="copyright">© 2026 Lisa Voronov</div>
+        </div>
     </div>
 
 </body>
