--- a/me.html
+++ b/me.html
@@ -44,7 +44,7 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; 
+            justify-content: space-between; /* Прижимаем футер к низу */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
@@ -66,7 +66,6 @@
             max-width: 480px;
             margin-top: 40px;
             text-align: justify;
-            text-align-last: left;
         }
 
         .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
@@ -75,15 +74,11 @@
             display: flex; 
             flex-direction: column; 
             gap: 15px; 
-            margin-top: auto; 
         }
 
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .nav-arrows, .footer-bottom { display: flex; justify-content: space-between; font-size: 15px; }
+        .nav-arrows a, .footer-bottom a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
-
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .right-side {
             width: 50%;
@@ -101,6 +96,11 @@
             object-fit: contain;
         }
 
+        /* СКРЫВАЕМ МОБИЛЬНОЕ НА ДЕСКТОПЕ */
+        @media (min-width: 769px) {
+            .mobile-bottom-wrapper, .mobile-gallery { display: none !important; }
+        }
+
         /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
             body { flex-direction: column; overflow-y: auto; }
@@ -109,15 +109,15 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 40px;
+                padding: 80px 20px 20px;
                 display: block;
             }
 
+            .info-side .left-footer { display: none !important; }
+
             .back-link {
                 position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
+                top: 0; left: 0; width: 100%;
                 background: #ffffff;
                 padding: 20px;
                 z-index: 100;
@@ -133,39 +133,32 @@
                 padding: 0 20px;
                 box-sizing: border-box;
             }
-            .mobile-gallery img {
-                width: 100%;
-                height: auto;
-                margin-bottom: 20px;
+            .mobile-gallery img { width: 100%; height: auto; margin-bottom: 20px; }
+
+            .mobile-bottom-wrapper {
+                display: flex;
+                flex-direction: column;
+                gap: 5px; /* РАССТОЯНИЕ 5PX */
+                padding: 20px 0 50px 0;
+                border-top: 1px solid #eee;
             }
 
-            .info-side .left-footer { display: none; }
-
-            .mobile-nav { display: flex; padding: 20px; border-top: 1px solid #eee; }
-
-            .mobile-footer {
+            .mobile-nav-arrows, .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 20px 20px 50px;
-                font-size: 14px;
-                width: 100%;
-                box-sizing: border-box;
+                padding: 0 20px;
+                font-size: 15px;
             }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
+            .mobile-nav-arrows a, .mobile-footer a { text-decoration: none; color: #0D0D0D; }
             .description { text-align: left; margin-top: 20px; }
-        }
-
-        @media (min-width: 769px) {
-            .mobile-nav, .mobile-footer, .mobile-gallery { display: none; }
         }
     </style>
 </head>
 <body>
 
     <div class="info-side">
-        <a href="index.html?p=7" class="back-link">← Back to portfolio</a>
-        
         <div>
+            <a href="index.html?p=7" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">Lisa Voronov</span> 
                 that's me. I am a graphic designer with extensive experience in digital and print media. 
@@ -199,14 +192,15 @@
         <img src="work52.png" loading="lazy">
     </div>
 
-    <div class="nav-arrows mobile-nav">
-        <a href="basler-beauty.html">‹ Previous</a>
-        <a href="simplie.html">Next ›</a>
-    </div>
-
-    <div class="mobile-footer">
-        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-        <div class="copyright">© 2026 Lisa Voronov</div>
+    <div class="mobile-bottom-wrapper">
+        <div class="mobile-nav-arrows">
+            <a href="basler-beauty.html">‹ Previous</a>
+            <a href="simplie.html">Next ›</a>
+        </div>
+        <div class="mobile-footer">
+            <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+            <div class="copyright">© 2026 Lisa Voronov</div>
+        </div>
     </div>
 
     <script>
