--- a/simplie.html
+++ b/simplie.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
-    <meta name="googlebot" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
@@ -29,11 +28,10 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            overflow-y: auto; 
-            /* Плавный скролл для браузеров */
-            scroll-behavior: smooth; 
+            overflow-x: hidden;
         }
 
+        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -49,19 +47,17 @@
             z-index: 10;
         }
 
-        .back-link, .description, .nav-arrows, .footer-bottom {
-            font-size: 15px;
-        }
-
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
+            font-size: 15px;
             line-height: 1;
         }
 
         .description {
+            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -69,42 +65,27 @@
             text-align-last: left;
         }
 
-        .brand-name {
-            font-family: 'Notbad Sans Bold', sans-serif;
-            font-weight: bold;
-        }
+        .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
 
-        .left-footer {
-            display: flex;
-            flex-direction: column;
+        .left-footer { 
+            display: flex; 
+            flex-direction: column; 
             gap: 15px; 
         }
 
-        .nav-arrows {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0; 
+        .nav-arrows, .footer-bottom { 
+            display: flex; 
+            justify-content: space-between; 
+            font-size: 15px; 
         }
 
-        .nav-arrows a {
-            text-decoration: none;
-            color: #0D0D0D;
-            transition: opacity 0.3s;
+        .nav-arrows a, .footer-bottom a { 
+            text-decoration: none; 
+            color: #0D0D0D; 
+            transition: opacity 0.3s; 
         }
 
         .nav-arrows a:hover { opacity: 0.5; }
-
-        .footer-bottom {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            line-height: 1;
-        }
-
-        .footer-bottom a {
-            color: #0D0D0D;
-            text-decoration: none;
-        }
 
         .content-side {
             width: 50%;
@@ -119,74 +100,67 @@
             width: 100%;
             display: block;
             margin-bottom: 20px;
-            /* ОПТИМИЗАЦИЯ: Подсказываем браузеру заранее готовить слой для прокрутки */
             will-change: transform;
-            /* Плавное появление при загрузке */
             animation: fadeIn 0.5s ease-in-out;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+        /* СКРЫВАЕМ МОБИЛЬНЫЙ ФУТЕР НА ДЕСКТОПЕ */
+        @media (min-width: 769px) {
+            .mobile-bottom-wrapper { display: none !important; }
         }
 
-        .content-side img:last-child {
-            margin-bottom: 0;
-        }
-        .mobile-footer { display: none; }
-        .mobile-nav { display: none; }
-
+        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
-            body {
-                flex-direction: column;
-            }
+            body { flex-direction: column; overflow-y: auto; }
+            
             .info-side {
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 0 20px 40px;
+                padding: 80px 20px 20px;
+                display: block;
             }
+
+            .info-side .left-footer { display: none !important; }
+
+            .back-link {
+                position: fixed;
+                top: 0; left: 0; width: 100%;
+                background: #ffffff;
+                padding: 20px;
+                z-index: 100;
+                box-sizing: border-box;
+            }
+
             .content-side {
                 width: 100%;
                 margin-left: 0;
                 padding: 20px;
-                box-sizing: border-box;
             }
-            .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
-                display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
-            }
-            .info-side .footer-bottom {
-                display: none;
-            }
-            .info-side .nav-arrows {
-                display: none;
-            }
-            .mobile-nav {
+
+            .description { text-align: left; margin-top: 20px; }
+
+            /* МОБИЛЬНЫЙ ФУТЕР */
+            .mobile-bottom-wrapper {
                 display: flex;
-                padding: 0 20px;
+                flex-direction: column;
+                gap: 5px; /* РАССТОЯНИЕ 5PX */
+                padding: 20px 0 50px 0;
+                border-top: 1px solid #eee;
             }
-            .mobile-footer {
+
+            .mobile-nav-arrows, .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                align-items: center;
-                padding: 20px 20px 50px 20px;
+                padding: 0 20px;
                 font-size: 15px;
-                width: 100%;
-                box-sizing: border-box;
             }
-            .mobile-footer a {
-                color: #0D0D0D;
-                text-decoration: none;
-            }
-            .description { 
-                text-align: left; 
-                margin-top: 0;
+
+            .mobile-nav-arrows a, .mobile-footer a { 
+                text-decoration: none; 
+                color: #0D0D0D; 
             }
         }
     </style>
@@ -200,9 +174,7 @@
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
                 <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
                 developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing 
-                product and model photo shoots, and preparing materials for print and digital use.
-                My work included concept development, layout, visual storytelling design, pre-press preparation, 
-                production control, and post-production of images for the website, e-commerce, and social media.
+                product and model photo shoots.
             </div>
         </div>
 
@@ -211,7 +183,6 @@
                 <a href="me.html">‹ Previous</a>
                 <a href="iles-formula.html">Next ›</a>
             </div>
-
             <div class="footer-bottom">
                 <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
                 <div class="copyright">© 2026 Lisa Voronov</div>
@@ -227,14 +198,15 @@
         <img src="work21.png" loading="lazy" decoding="async">
     </div>
 
-    <div class="nav-arrows mobile-nav">
-        <a href="me.html">‹ Previous</a>
-        <a href="iles-formula.html">Next ›</a>
-    </div>
-
-    <div class="mobile-footer">
-        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-        <div class="copyright">© 2026 Lisa Voronov</div>
+    <div class="mobile-bottom-wrapper">
+        <div class="mobile-nav-arrows">
+            <a href="me.html">‹ Previous</a>
+            <a href="iles-formula.html">Next ›</a>
+        </div>
+        <div class="mobile-footer">
+            <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+            <div class="copyright">© 2026 Lisa Voronov</div>
+        </div>
     </div>
 
 </body>
