--- a/speexx.html
+++ b/speexx.html
@@ -42,7 +42,7 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: space-between; /* Распределяем контент */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
@@ -73,15 +73,11 @@
             display: flex; 
             flex-direction: column; 
             gap: 15px; 
-            margin-top: auto; 
         }
 
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .nav-arrows, .footer-bottom { display: flex; justify-content: space-between; font-size: 15px; }
+        .nav-arrows a, .footer-bottom a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
-
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; line-height: 1; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         /* Контейнер для скролла */
         .scroll-wrapper {
@@ -121,7 +117,7 @@
 
         /* СКРЫВАЕМ МОБИЛЬНЫЕ ЭЛЕМЕНТЫ НА ДЕСКТОПЕ */
         @media (min-width: 769px) {
-            .mobile-nav, .mobile-footer {
+            .mobile-bottom-wrapper {
                 display: none !important;
             }
         }
@@ -134,7 +130,7 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 40px;
+                padding: 80px 20px 20px;
                 display: block;
             }
 
@@ -172,18 +168,22 @@
                 margin-bottom: 15px;
             }
 
-            .mobile-nav { display: flex; padding: 20px; border-top: 1px solid #eee; justify-content: space-between; font-size: 15px; }
-            .mobile-nav a { text-decoration: none; color: #0D0D0D; }
-            
-            .mobile-footer {
+            /* Единый блок футера для мобильных */
+            .mobile-bottom-wrapper {
+                display: flex;
+                flex-direction: column;
+                gap: 5px; /* РАССТОЯНИЕ 5PX */
+                padding: 20px 0 50px 0;
+                border-top: 1px solid #eee;
+            }
+
+            .mobile-nav-arrows, .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 20px 20px 50px;
-                font-size: 14px;
-                width: 100%;
-                box-sizing: border-box;
+                padding: 0 20px;
+                font-size: 15px;
             }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
+            .mobile-nav-arrows a, .mobile-footer a { text-decoration: none; color: #0D0D0D; }
             
             .description { text-align: left; margin-top: 20px; }
         }
@@ -226,14 +226,15 @@
         </div>
     </div>
 
-    <div class="nav-arrows mobile-nav">
-        <a href="kaa.html">‹ Previous</a>
-        <a href="basler-beauty.html">Next ›</a>
-    </div>
-
-    <div class="mobile-footer">
-        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-        <div class="copyright">© 2026 Lisa Voronov</div>
+    <div class="mobile-bottom-wrapper">
+        <div class="mobile-nav-arrows">
+            <a href="kaa.html">‹ Previous</a>
+            <a href="basler-beauty.html">Next ›</a>
+        </div>
+        <div class="mobile-footer">
+            <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+            <div class="copyright">© 2026 Lisa Voronov</div>
+        </div>
     </div>
 
     <script>
