--- a/trendyol.html
+++ b/trendyol.html
@@ -44,8 +44,7 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            /* Изменили, чтобы элементы не разлетались */
-            justify-content: flex-start; 
+            justify-content: space-between; /* Распределяем контент по краям */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
@@ -58,6 +57,7 @@
             text-transform: uppercase;
             letter-spacing: 0.1em;
             font-size: 15px;
+            line-height: 1;
         }
 
         .description {
@@ -66,7 +66,6 @@
             max-width: 480px;
             margin-top: 40px;
             text-align: justify;
-            text-align-last: left;
         }
 
         .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
@@ -75,15 +74,11 @@
             display: flex; 
             flex-direction: column; 
             gap: 15px; 
-            margin-top: auto; /* Прижимает футер к низу, но сохраняет gap */
         }
         
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .nav-arrows, .footer-bottom { display: flex; justify-content: space-between; font-size: 15px; }
+        .nav-arrows a, .footer-bottom a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
-
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .right-side {
             width: 50%;
@@ -101,20 +96,22 @@
             object-fit: contain;
         }
 
+        /* СКРЫВАЕМ МОБИЛЬНОЕ НА ДЕСКТОПЕ */
+        @media (min-width: 769px) {
+            .mobile-top-nav, .mobile-bottom-wrapper, .mobile-gallery { display: none !important; }
+        }
+
         /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
             body { flex-direction: column; overflow-y: auto; }
 
             .mobile-top-nav {
                 position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
+                top: 0; left: 0; width: 100%;
                 background: #ffffff;
                 padding: 20px;
                 z-index: 9999;
                 box-sizing: border-box;
-                display: block;
             }
 
             .info-side {
@@ -122,9 +119,10 @@
                 height: auto;
                 position: relative;
                 padding: 80px 20px 20px; 
-                z-index: 10;
-                display: block; /* Убираем flex на мобильных для корректных отступов */
+                display: block;
             }
+
+            .info-side .left-footer, .info-side .back-link { display: none !important; }
 
             .right-side { display: none; }
 
@@ -135,36 +133,26 @@
                 padding: 0 20px;
                 box-sizing: border-box;
             }
-            .mobile-gallery img {
-                width: 100%;
-                height: auto;
-                margin-bottom: 20px;
-            }
+            .mobile-gallery img { width: 100%; height: auto; margin-bottom: 20px; }
 
-            .info-side .left-footer, .info-side .back-link {
-                display: none;
-            }
-
-            .mobile-footer {
+            /* Единый мобильный блок футера */
+            .mobile-bottom-wrapper {
                 display: flex;
-                justify-content: space-between;
-                padding: 40px 20px;
-                font-size: 14px;
-            }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            
-            .mobile-nav-arrows {
-                display: flex;
-                justify-content: space-between;
-                padding: 20px;
+                flex-direction: column;
+                gap: 5px; /* РАССТОЯНИЕ 5PX */
+                padding: 20px 0 50px 0;
                 border-top: 1px solid #eee;
+            }
+
+            .mobile-nav-arrows, .mobile-footer {
+                display: flex;
+                justify-content: space-between;
+                padding: 0 20px;
                 font-size: 15px;
             }
-            .mobile-nav-arrows a { text-decoration: none; color: #0D0D0D; }
-        }
 
-        @media (min-width: 769px) {
-            .mobile-top-nav, .mobile-footer, .mobile-nav-arrows, .mobile-gallery { display: none; }
+            .mobile-nav-arrows a, .mobile-footer a { text-decoration: none; color: #0D0D0D; }
+            .description { text-align: left; margin-top: 20px; }
         }
     </style>
 </head>
@@ -209,17 +197,16 @@
         <img src="work31.png" loading="lazy">
     </div>
 
-  <div class="mobile-bottom-wrapper">
-    <div class="mobile-nav-arrows">
-        <a href="iles-formula.html">‹ Previous</a>
-        <a href="kaa.html">Next ›</a>
+    <div class="mobile-bottom-wrapper">
+        <div class="mobile-nav-arrows">
+            <a href="iles-formula.html">‹ Previous</a>
+            <a href="kaa.html">Next ›</a>
+        </div>
+        <div class="mobile-footer">
+            <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+            <div class="copyright">© 2026 Lisa Voronov</div>
+        </div>
     </div>
-
-    <div class="mobile-footer">
-        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-        <div class="copyright">© 2026 Lisa Voronov</div>
-    </div>
-</div>
 
     <script>
         const images = ['work26.png', 'work27.png', 'work28.png', 'work29.png', 'work30.png', 'work31.png'];
